changes for release 2.0