@@ -1,33 +1,26 @@
-<!--
-    Copyright 2016 DLR - German Aerospace Center
-   
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-   
-    http://www.apache.org/licenses/LICENSE-2.0
-   
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
- -->
+<!-- Copyright 2016 DLR - German Aerospace Center Licensed under the Apache 
+	License, Version 2.0 (the "License"); you may not use this file except in 
+	compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+	Unless required by applicable law or agreed to in writing, software distributed 
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+	the specific language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.dlr.knowledgefinderII</groupId>
+		<groupId>de.dlr.knowledgefinder</groupId>
 		<artifactId>dataimport</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<groupId>de.dlr.knowledgefinderII.dataimport</groupId>
+	<groupId>de.dlr.knowledgefinder.dataimport</groupId>
 	<artifactId>utils</artifactId>
 	<packaging>jar</packaging>
 
 	<properties>
+		<powermock.version>1.5.4</powermock.version>
 		<project.test.index.directory>src/test-files/solr-index</project.test.index.directory>
 
 		<!-- RandomizedTesting library system properties -->
@@ -42,7 +35,7 @@
 		<tests.codec>random</tests.codec>
 		<tests.directory>random</tests.directory>
 		<tests.locale>random</tests.locale>
-		<tests.luceneMatchVersion>4.7</tests.luceneMatchVersion>
+		<tests.luceneMatchVersion>7.2.0</tests.luceneMatchVersion>
 		<tests.multiplier>1</tests.multiplier>
 		<tests.nightly>false</tests.nightly>
 		<tests.postingsformat>random</tests.postingsformat>
@@ -63,7 +56,7 @@
 					<reportFormat>plain</reportFormat>
 					<workingDirectory>${project.test.index.directory}</workingDirectory>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
-					<argLine>-Xmx512M -XX:MaxPermSize=256M</argLine>
+					<argLine>-Xmx512M</argLine>
 					<systemPropertyVariables>
 						<tempDir>.</tempDir>
 						<java.awt.headless>true</java.awt.headless>
@@ -94,17 +87,17 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5</version> <!-- frontend 2.5 und 1.6; fileparser 2.1, 1.7; dataimport 2.1, 1.7 -->
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.6.6</version><!--$NO-MVN-MAN-VER$-->
-		</dependency>
-
 		<!-- SVNKit -->
 		<dependency>
 			<groupId>org.tmatesoft.svnkit</groupId>
@@ -117,6 +110,7 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr-runtime</artifactId>
+			<version>3.5.2</version>
 		</dependency>
 
 		<!-- Jackson -->
@@ -129,12 +123,6 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 		</dependency>
 
-		<!-- Lucene testing -->
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-test-framework</artifactId>
-		</dependency>
-
 		<!-- Lucene -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
@@ -145,12 +133,6 @@
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-core</artifactId>
-			<exclusions>
-					<exclusion>
-						<groupId>jdk.tools</groupId>
-						<artifactId>jdk.tools</artifactId>
-					</exclusion>
-				</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.solr</groupId>
@@ -159,45 +141,90 @@
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-dataimporthandler-extras</artifactId>
-			<exclusions>
-					<exclusion>
-						<groupId>jdk.tools</groupId>
-						<artifactId>jdk.tools</artifactId>
-					</exclusion>
-				</exclusions>
 		</dependency>
-
 
 		<!-- Junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<!-- SQLite jdbc -->
+		<dependency>
+    		<groupId>org.xerial</groupId>
+    		<artifactId>sqlite-jdbc</artifactId>
+    		<version>3.20.0</version>
+		</dependency>
+		
+		<!-- License issues has to be checked for the following three dependencies -->
+        <dependency>
+              <groupId>com.levigo.jbig2</groupId>
+              <artifactId>levigo-jbig2-imageio</artifactId>
+             <version>2.0</version>
+         </dependency>
+         
+         <dependency>
+             <groupId>com.github.jai-imageio</groupId>
+             <artifactId>jai-imageio-core</artifactId>
+             <version>1.3.1</version>
+         </dependency>    
+         
+         <dependency>
+             <groupId>com.github.jai-imageio</groupId>
+             <artifactId>jai-imageio-jpeg2000</artifactId>
+             <version>1.3.0</version>
+         </dependency>
+
+		<!-- Lucene testing -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-test-framework</artifactId>
+			<version>${lucene.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Solr testing -->
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-test-framework</artifactId>
+			<version>${solr.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- easymock testing -->
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
+			<version>${powermock.version}</version>
 			<artifactId>powermock-api-easymock</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
+			<version>3.2</version>
+			<scope>test</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.6</version><!--$NO-MVN-MAN-VER$ -->
+		</dependency>
+
 		<!-- remove? -->
 		<dependency>
 			<groupId>org.apache.derby</groupId>
@@ -210,11 +237,6 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.3</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tika</groupId>
-			<artifactId>tika-parsers</artifactId>
-			<version>1.5</version>
 		</dependency>
 	</dependencies>
 </project>
